--- a/frozen lake.ipynb
+++ b/frozen lake.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -8,6 +9,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -69,6 +71,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -92,6 +95,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -113,6 +117,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "newState, reward, done, _, _=env.step(0)\n",
+    "newState"
+   ]
+  },
+  {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -135,6 +150,7 @@
     "    rewards=0. \n",
     "    exploration_rate=1. \n",
     "    curState=env.reset()\n",
+    "    curState=curState[0]\n",
     "    action=-1\n",
     "    for step in range(max_steps_per_episode):\n",
     "        exploration_rate-=(exploration_decay_rate*step*ep )\n",
@@ -144,7 +160,7 @@
     "        else:\n",
     "            action=np.argmax(q_table[curState, :])\n",
     "        \n",
-    "        newState, reward, done, info = env.step(action)\n",
+    "        newState, reward, done, _,_ = env.step(action)\n",
     "        newQVal=compute_new_Q_value( newState, reward)\n",
     "        q_table[curState, action]=(1-lr)*q_table[curState, action] + (lr*newQVal        )\n",
     "        rewards+=reward \n",
@@ -170,6 +186,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -183,13 +200,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "env.close()\n",
+    "env = gym.make(\"FrozenLake-v1\", render_mode='human')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "curState=env.reset()\n",
+    "curState=curState[0]\n",
     "for step in range(max_steps_per_episode):\n",
     "    render()\n",
     "    time.sleep(1)\n",
     "    # Get best action from q-table for current state \n",
     "    action=np.argmax(q_table[curState, : ])\n",
-    "    newState, reward, done, info = env.step(action)\n",
+    "    newState, reward, done, _, _ = env.step(action)\n",
     "    curState=newState\n",
     "    if done or (step+1)==max_steps_per_episode:\n",
     "        render()        \n",
