--- a/mountaincar.ipynb
+++ b/mountaincar.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -24,6 +25,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -52,6 +54,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -64,7 +67,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "env = gym.make(\"MountainCar-v0\",new_step_api=True)\n",
+    "env = gym.make(\"MountainCar-v0\")\n",
     "\n",
     "state_size = env.observation_space.shape\n",
     "num_actions = env.action_space.n\n",
@@ -73,6 +76,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -97,6 +101,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -131,6 +136,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -175,6 +181,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -195,6 +202,7 @@
     "\n",
     "for ep in range (1, (max_episodes+1),1):\n",
     "    state=env.reset()\n",
+    "    state=state[0]\n",
     "    Rewards=0.\n",
     "    epsilon*=decay\n",
     "    for step in range(1, (max_steps_in_episode+1), 1):        \n",
@@ -235,6 +243,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "env.close()\n",
+    "env = gym.make(\"MountainCar-v0\", render_mode='human' )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "utils.runDQNAgent(model, env, device, fps=25)\n",
     "assert(False)"
    ]
@@ -245,10 +263,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "env.close()"
+    "# env.close()"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -265,11 +284,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -289,6 +310,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
