--- a/cartpole.ipynb
+++ b/cartpole.ipynb
@@ -22,21 +22,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# uncomment to install \n",
-    "# !pip install gym\n",
-    "# !pip install gym[box2d]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import utils \n",
     "from replaybuffer import ReplayBuffer\n",
     "import torch \n",
-    "import gym\n",
+    "import gymnasium as gym\n",
     "import numpy as np \n",
     "import copy \n",
     "import matplotlib.pyplot as plt\n",
@@ -53,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +86,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/john/miniconda3/envs/torch/lib/python3.8/site-packages/gym/envs/classic_control/cartpole.py:211: UserWarning: \u001b[33mWARN: You are calling render method without specifying any render mode. You can specify the render_mode at initialization, e.g. gym(\"CartPole-v1\", render_mode=\"rgb_array\")\u001b[0m\n",
+      "c:\\Users\\kailo\\miniconda3\\envs\\torch\\lib\\site-packages\\gymnasium\\envs\\classic_control\\cartpole.py:215: UserWarning: \u001b[33mWARN: You are calling render method without specifying any render mode. You can specify the render_mode at initialization, e.g. gym.make(\"CartPole-v1\", render_mode=\"rgb_array\")\u001b[0m\n",
       "  gym.logger.warn(\n"
      ]
     }
@@ -115,14 +104,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "state=[-0.03018145 -0.03589009  0.03399565  0.03276016], next=[-0.03089926 -0.23148264  0.03465085  0.33597228], reward=1.0, done=False \n"
+      "state=[ 0.0447919   0.00592917 -0.03987714  0.03600601], next=[ 0.04491048 -0.18859892 -0.03915701  0.3158454 ], reward=1.0, done=False \n"
      ]
     }
    ],
@@ -142,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,7 +522,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PyTorch",
+   "display_name": "PyTorch 2",
    "language": "python",
    "name": "torch"
   },
@@ -547,7 +536,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
