--- a/lunarlander.ipynb
+++ b/lunarlander.ipynb
@@ -14,20 +14,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !pip install gym\n",
-    "# !pip install gym[box2d]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import utils \n",
     "from replaybuffer import ReplayBuffer\n",
     "import torch \n",
-    "import gym\n",
+    "import gymnasium as gym\n",
     "import numpy as np \n",
     "import copy \n",
     "import matplotlib.pyplot as plt\n",
@@ -44,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +419,7 @@
        ")"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,26 +441,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "env = gym.make(\"LunarLander-v2\", render_mode='human' )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " rewards gaained: 266.16\n",
-      "Terminated with rewards=266.16\n"
+      " rewards gaained: 290.97\n",
+      "Terminated with rewards=290.97\n"
      ]
     }
    ],
    "source": [
-    "env = gym.make(\"LunarLander-v2\", render_mode='human' )\n",
     "utils.runDQNAgent(trainedModel, env, device, fps=25)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,7 +478,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PyTorch",
+   "display_name": "PyTorch 2",
    "language": "python",
    "name": "torch"
   },
@@ -494,7 +492,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
